--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.9",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
     "@angular/forms": "~10.0.9",
+    "@angular/localize": "~10.0.9",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^10.14.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
